src/objects/copado__Deployment_Flow__c.object
<CustomObject>
    <fields>
        <fullName>copado__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Branch_Management_Coordinates__c</fullName>
        <description>This field is used to store the Branch Management Step locations of each box. This field should not be added to the page layout.</description>
        <label>Branch Management Coordinates</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Flow_Step_Coordinates__c</fullName>
        <description>This field is used to store the Deployment Flow Step locations of each box. This field should not be added to the page layout.</description>
        <label>Flow Step Coordinates</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Git_Repository__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Git Repository</label>
        <referenceTo>copado__Git_Repository__c</referenceTo>
        <relationshipLabel>Deployment Flows</relationshipLabel>
        <relationshipName>Deployment_Flows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Main_Branch__c</fullName>
        <label>Main Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Deployment Flow</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Active__c</columns>
        <columns>copado__Git_Repository__c</columns>
        <columns>copado__Main_Branch__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Deployment Flow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Flows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>